--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.13.3",
     "@react-email/render": "^0.0.12",
     "@reduxjs/toolkit": "^2.1.0",
     "framer-motion": "^11.2.10",
